change to toList() instead of collect(Collectors.toList()) in ReposWithBranchesServiceImpl