@@ -9,7 +9,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -39,7 +38,7 @@ public class ReposWithBranchesServiceImpl implements ReposWithBranchesService {
                         .lastCommitSha(branch.commit().sha())
                         .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
